# crewai-problem-solving-agent

./: .env_example  .gitignore  GOOGLE_SETUP.md  README.md  pyproject.toml  railway.json  requirements.txt  streamlit_app.py
src/problem_solving_research_agent/: crew.py  main.py
src/problem_solving_research_agent/config/: agents.yaml  tasks.yaml
src/problem_solving_research_agent/tools/: file_writer.py  google_docs.py
