[project]
name = "problem_solving_research_agent"
version = "0.1.0"
description = "problem_solving_research_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
problem_solving_research_agent = "problem_solving_research_agent.main:run"
run_crew = "problem_solving_research_agent.main:run"
train = "problem_solving_research_agent.main:train"
replay = "problem_solving_research_agent.main:replay"
test = "problem_solving_research_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
